--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -1,3 +1,7 @@
+$light: #d8dbe0;
+$dark: #28292c;
+$link: rgb(27, 129, 112);
+$link-hover: rgb(24, 94, 82);
 
 .header {
   display: flex;
@@ -11,14 +15,8 @@
   padding: 1.5% 0;
 }
 
-.left {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  padding-left: 10%;
-}
-
 .name {
+  padding-left: 10%;
 }
 
 .right {
@@ -30,6 +28,7 @@
   .social {
     display: flex;
     align-items: center;
+    justify-content: center;
 
     a {
       margin-right: 15px;
@@ -37,7 +36,35 @@
   }
 }
 
-.name {
-  font-size: 1.5rem;
-  padding-left: 10%;
+.dl-toggle {
+  label {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    background-color: #ccc;
+    border-radius: 17px;
+  }
+
+  input[type="checkbox"] {
+    opacity: 0;
+    width: 0;
+    height: 0;
+
+    &:checked + .slider {
+      transform: translateX(26px);
+    }
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 4px;
+    left: 4px;
+    width: 26px;
+    height: 26px;
+    background-color: white;
+    border-radius: 50%;
+    transition: transform 0.4s;
+  }
 }
